	  of August 5th, 2016:
	  https://yahoo.tumblr.com/post/145715934739/q2-2016-progress-report-on-our-product
	  A new protocol plugin has been written to support the new protocol.
	  It can be found here: https://github.com/EionRobb/funyahoo-plusplus
	  This also removes support for Yahoo! Japan. According to
	  http://messenger.yahoo.co.jp/ the service ended March 26th, 2014.

	General
	* Replaced instances of d.pidgin.im with developer.pidgin.im and updated the
	  urls to use https. (#17036)

	IRC
	* Fixed issue of messages being silently cut off at 500 characters. Large
	  messages are now split into parts and sent one by one. (#4753)

version 2.11.0 (06/21/2016):
	General:
	* 2.10.12 was accidentally released with new additions to the API and
	  should have been released as 2.11.0.  Unfortunately, we did not catch
	  the mistake until after 2.10.12 was released, but we're fixing it now.
	  See ChangeLog.API for more information.
	* Include the Mozilla certificate bundle. This fixes connecting to servers
	  with certificates from Let's Encrypt.
	* Remove all 1024-bit CAs

	libpurple:
	* media: fix an issue with ximagesink displaying only a corner cut-out of
	  a larger webcam video (Jakub Adam)
	* mediamanager: update output window destruction so that it reflects recent
	  changes in the media pipeline structure (Jakub Adam)
	* Ported Instantbird's CommandUiOps to libpurple (Dequis)

	Pidgin:
	* Fixed #14962
	* Fixed alignment of incoming right-to-left messages in protocols that
	  don't support rich text
	* Fix a potential crash while exiting pidgin

	Windows-Specific Changes:
	* Use getaddrinfo for DNS to enable IPv6 (#1075)
	* Updates to dependencies:
		* NSS 3.24 and NSPR 4.12.

	AIM:
	* Add support for the newer kerberos-based authentication of AIM 8.x

	Bonjour
	* Fixed building on Mac OSX (Patrick Cloke) (#16883)

	ICQ:
	* Stop truncating passwords to 8 characters like old ICQ clients did.
	  (#16692). If you actually needed this, truncate your password